discussion/kv_engine/185464/185464_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge remote-tracking branch 'couchbase/cheshire-cat' into 7.1.4

* couchbase/cheshire-cat:
  MB-54975: Update Ephemeral replica memory stats on DEL_VBUCKET
  MB-54776: Don't return $XTOC=null

Change-Id: Id48a0ae21693a68a43c17d675842822778650b8e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-01-24 15:59:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-24 20:37:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/6/ : FAILURE

Compile error at [2023-01-24T20:29:22.250Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/6/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/6/ : FAILURE

Compile error at [2023-01-24T20:30:43.570Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/6/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/6/ : FAILURE

Compile error at [2023-01-24T20:30:02.398Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/6/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/6/ : FAILURE

Compile error at [2023-01-24T20:35:54.737Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/6/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/5/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\ephemeral_bucket_test.cc(254): error C2664: "cb::engine_errc EventuallyPersistentEngine::deleteVBucket(const CookieIface &,Vbid,bool)": cannot convert argument 1 from "CookieIface *" to "const CookieIface &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/5/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/5/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37: error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
              engine->deleteVBucket(cookie, vbid, false));
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/src/ep_engine.h:899:54: note: passing argument to parameter "cookie" here
    cb::engine_errc deleteVBucket(const CookieIface& cookie,
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_xattr.cc:2223:5: error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
    setBodyAndXattr(conn, value, {{sysXattr, xattrVal}});
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_client_test.h:127:10: note: candidate function not viable: no known conversion from "MemcachedConnection" to "const std::string" (aka "const basic_string<char>") for 1st argument
    void setBodyAndXattr(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_client_test.h:140:10: note: candidate function not viable: requires 2 arguments, but 3 were provided
    void setBodyAndXattr(
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/5/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/5/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/7/ : FAILURE

Compile error at [2023-01-24T20:19:44.035Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/7/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/7/ : FAILURE

Compile error at [2023-01-24T20:35:08.997Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/7/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-714/5/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2023-01-26 22:00:16.000000000
Message: 
Abandoned

Split into two merges
----------------------------------------------------------------------------------------------------------------------
